# telebot

./: Dockerfile  main.py  pyproject.toml
handle/: __init__.py  list_assets.py
handle/convert/: __init__.py  docxtopdf.py  imgresize.py  pdftodocx.py
handle/download/: __init__.py  tiktok.py
handle/general/: __init__.py  cancel.py  help.py  start.py  status.py
